--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
+<div class="main-page">
+    <router-outlet></router-outlet>
+    <div>
+        <app-output></app-output>
+    </div>
+    <div>
+        <app-stats></app-stats>
+    </div>
+</div>
 
-<router-outlet></router-outlet>
