--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <div class="main-page">
     <router-outlet></router-outlet>
     <div>
+        <app-stage></app-stage>
+    </div>
+    <div>
         <app-output></app-output>
     </div>
     <div>
         <app-stats></app-stats>
     </div>
+
 </div>
 
