--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,7 @@
         <app-stage></app-stage>
     </div>
     <div>
-        <app-output></app-output>
+        <app-arena></app-arena>
     </div>
-    <div>
-        <app-stats></app-stats>
-    </div>
-
 </div>
 
