made random location for testing, enemy and attack work

--- a/src/app/arena/arena.component.html
+++ b/src/app/arena/arena.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button (click)="getNewEnemy()">Find New Opponent</button>
+<button mat-raised-button (click)="getEnemy()">Find New Opponent</button>
 <button mat-raised-button (click)="attack()">Attack</button><br>
 Player
 <p>Weapon: {{playerItem?.mainWeapon.name}}</p>
