--- a/src/app/stage/stage.component.html
+++ b/src/app/stage/stage.component.html
@@ -1,2 +1,3 @@
-<p>stage works! This is where the non text visuals are, starting in {{location}}</p>
-
+<p>stage works! This is where the non text visuals are, starting in {{location.name}}</p>
+<button mat-raised-button (click)="changeLocationRandom()">change to random location</button>
+{{location.name}}
