--- a/src/app/arena/arena.component.html
+++ b/src/app/arena/arena.component.html
@@ -1,17 +1,24 @@
-<button mat-raised-button (click)="getEnemy()">Find New Opponent</button><br>
+<button mat-raised-button (click)="getEnemy()">Find New Opponent</button><br />
 Player
-<p>Weapon: {{playerItem?.mainWeapon.name}}</p>
-<p>Attack: {{playerItem?.mainWeapon.minDmg}} - {{playerItem?.mainWeapon.maxDmg}}</p>
-<p>HP: {{player?.hp}}/{{player?.maxHp}}</p>
-<p>gold: {{player?.gold}}</p>
-<p>points: {{player?.points}}</p>
+<p>Weapon: {{ playerItem?.mainWeapon.name }}</p>
+<p>
+  Attack: {{ playerItem?.mainWeapon.minDmg }} -
+  {{ playerItem?.mainWeapon.maxDmg }}
+</p>
+<p>HP: {{ player?.hp }}/{{ player?.maxHp }}</p>
+<p>gold: {{ player?.gold }}</p>
+<p>points: {{ player?.points }}</p>
 <p></p>
 <div>
-    <button mat-raised-button (click)="merchantModal()">talk to Merchant</button><br>
+  <button [disabled]="enemyHp > 0" mat-raised-button (click)="merchantModal()">
+    talk to Merchant</button><br />
+</div>
+<div>
+  <button mat-raised-button (click)="menuModal()">open inventory</button><br />
 </div>
 <div *ngIf="enemyHp > 0">
-    <button mat-raised-button [disabled]="wait" (click)="attack()">Attack</button><br>
-    Opponent
-    <p>Name: {{this.thisEnemy?.name}}</p>
-    <p>HP: {{enemyHp}}</p>
+  <button mat-raised-button [disabled]="wait" (click)="attack()">Attack</button><br />
+  Opponent
+  <p>Name: {{ this.thisEnemy?.name }}</p>
+  <p>HP: {{ enemyHp }}</p>
 </div>
