--- a/src/app/arena/arena.component.html
+++ b/src/app/arena/arena.component.html
@@ -1,24 +1,48 @@
-<button mat-raised-button (click)="getEnemy()">Find New Opponent</button><br />
-Player
-<p>Weapon: {{ playerItem?.mainWeapon.name }}</p>
-<p>
-  Attack: {{ playerItem?.mainWeapon.minDmg }} -
-  {{ playerItem?.mainWeapon.maxDmg }}
-</p>
-<p>HP: {{ player?.hp }}/{{ player?.maxHp }}</p>
-<p>gold: {{ player?.gold }}</p>
-<p>points: {{ player?.points }}</p>
-<p></p>
-<div>
-  <button [disabled]="enemyHp > 0" mat-raised-button (click)="merchantModal()">
-    talk to Merchant</button><br />
+
+<div class="button-row">
+  <div class="menu">
+    <button mat-raised-button (click)="menuModal()">open inventory</button><br />
+  </div>
+  <div class="merchant">
+    <button [disabled]="enemyHp > 0" mat-raised-button (click)="merchantModal()">
+      talk to Merchant</button><br />
+  </div>
+  <div class="get-enemy">
+    <button mat-raised-button (click)="getEnemy()">Find New Opponent</button><br />
+  </div>
+  <div class="attack">
+    <button mat-raised-button [disabled]="wait || enemyHp < 1" (click)="attack()">Attack</button><br />
+  </div>
 </div>
-<div>
-  <button mat-raised-button (click)="menuModal()">open inventory</button><br />
+
+<div class="status-row">
+  <div class="player-stats">
+    <h1>Player</h1>
+    <h2>HP: {{ player?.hp }}/{{ player?.maxHp }}</h2>
+    <p>Weapon: {{ playerItem?.mainWeapon.name }}</p>
+    <p>
+      Attack: {{ playerItem?.mainWeapon.minDmg }} -
+      {{ playerItem?.mainWeapon.maxDmg }}
+    </p>
+
+    <p>gold: {{ player?.gold }}</p>
+    <p>points: {{ player?.points }}</p>
+
+  </div>
+  <div class="opponent-container" >
+    <h1>Opponent</h1>
+    <div class="opponent" *ngIf="enemyHp > 0">
+      <h2>HP: {{ enemyHp }}</h2>
+      <p>Name: {{ this.thisEnemy?.name }}</p>
+    </div>
+  </div>
+  <div class="output">
+    <p *ngFor="let out of central.output; let last = last"  [ngClass]="{last: last}">
+      {{out}}
+    </p>
+  </div>
 </div>
-<div *ngIf="enemyHp > 0">
-  <button mat-raised-button [disabled]="wait" (click)="attack()">Attack</button><br />
-  Opponent
-  <p>Name: {{ this.thisEnemy?.name }}</p>
-  <p>HP: {{ enemyHp }}</p>
-</div>
+
+
+
+
