some attack mechanics, pokemon placeholder enemies

--- a/src/app/stage/stage.component.html
+++ b/src/app/stage/stage.component.html
@@ -3,4 +3,5 @@
   {{location?.name}}
   <img class="protagonist" src="../../assets/{{central.playerImage}}.gif" >
   <img class="background" src="../../assets/dark-forest.gif" >
+  <img class="enemy" src="../../assets/{{central.enemyImage}}.gif" *ngIf="central.enemyImage" >
 </div>
