--- a/src/app/merchant-dialog/merchant-dialog.component.html
+++ b/src/app/merchant-dialog/merchant-dialog.component.html
@@ -68,5 +68,26 @@
     </mat-expansion-panel>
 </mat-accordion>
 <br>
-<button mat-raised-button [mat-dialog-close]="bounty">Cash out</button>
+<mat-accordion>
+  <mat-expansion-panel class="expansion-panel"
+      (opened)="panelOpenState = true"
+      (closed)="panelOpenState = false">
+      <mat-expansion-panel-header>
+      <mat-panel-title class="title">
+          Items List
+      </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-list>
+      <mat-list-item *ngFor="let item of inventory">
+          <button  mat-raised-button (click)="removeItem(item)">
+            Remove:
+              {{item.name}}
+              cost:{{item.cost}}
+          </button>
+      </mat-list-item>
+      </mat-list>
+  </mat-expansion-panel>
+</mat-accordion>
+<button mat-raised-button color="primary" [mat-dialog-close]="bounty">Cash out</button>
+<b class="shoppingGold">Gold: {{playerGold}}</b>
 
