--- a/src/app/stage/stage.component.html
+++ b/src/app/stage/stage.component.html
@@ -1,7 +1,7 @@
 <div class="stage">
   <button mat-raised-button (click)="changeLocationRandom()">change to random location</button>
   {{location?.name}}
-  <img class="protagonist" src="../../assets/{{central.playerImage}}.gif" >
-  <img class="background" src="../../assets/dark-forest.gif" >
-  <img class="enemy" src="../../assets/{{central.enemyImage}}.gif" *ngIf="central.enemyImage" >
+  <img class="protagonist" src="assets/{{central.playerImage}}.gif" >
+  <img class="background" src="assets/dark-forest.gif" >
+  <img class="enemy" src="assets/{{central.enemyImage}}.gif" *ngIf="central.enemyImage" >
 </div>
