--- a/src/app/menu-dialog/menu-dialog.component.html
+++ b/src/app/menu-dialog/menu-dialog.component.html
@@ -22,11 +22,24 @@
     </mat-selection-list>
     <hr>
     <h2>Items</h2>
-    <mat-selection-list [multiple]="false">
-      <mat-list-option *ngFor="let item of ItemGroup" [value]="item" (click)="useItem(item)">
-        {{item.name}}
-      </mat-list-option>
-    </mat-selection-list>
+    <mat-accordion>
+      <mat-expansion-panel class="expansion-panel"
+          (opened)="panelOpenState = true"
+          (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+          <mat-panel-title class="title">
+              Items
+          </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-list>
+          <mat-list-item *ngFor="let item of items">
+              <mat-option (click)="useItem(item)">
+                  {{item.name}}
+              </mat-option>
+          </mat-list-item>
+          </mat-list>
+      </mat-expansion-panel>
+    </mat-accordion>
   </div>
   <div class="equipped">
     <h2>Equpped:</h2>
