--- a/src/app/arena/arena.component.scss
+++ b/src/app/arena/arena.component.scss
@@ -5,6 +5,7 @@
   width: 70%;
   height: 50px;
   margin-left: 15%;
+
   .get-enemy {
     display: flex;
     float: left;
@@ -26,10 +27,21 @@
   .attack {
     display: flex;
     float: left;
-    width: 15%;
+    width: 30%;
+    font-size: 20;
     margin-left: 2%;
-  }
+    margin-top: -20px;
+      button{
+        width: 100%;
+      }
+      button:disabled{
+        display: none;
+      }
+
+    }
+
 }
+
 .status-row {
   min-width: 800px;
   margin-top: -10px;
