--- a/src/app/menu-dialog/menu-dialog.component.html
+++ b/src/app/menu-dialog/menu-dialog.component.html
@@ -48,10 +48,10 @@
     <h3><b>Armor:</b> {{showEquipped?.armor?.name}}</h3>
     <p class="hp-output"><b>HP: {{hp}}/{{maxHp}}</b></p>
   </div>
-  <button class="save-button"
+  <button class="exit-button"
     mat-raised-button color="primary"
     [mat-dialog-close]="equip"
   >
-    Save Changes
+    EXIT
   </button>
 </div>
