--- a/src/app/menu-dialog/menu-dialog.component.scss
+++ b/src/app/menu-dialog/menu-dialog.component.scss
@@ -12,9 +12,11 @@
     float: left;
     margin-left: 4%;
   }
-  .save-button{
+  .exit-button{
     position: relative;
     bottom: -135px;
+    line-height: 70px;
+    width: 100px;
     right: -4%;
   }
 }
