--- a/src/app/stage/stage.component.html
+++ b/src/app/stage/stage.component.html
@@ -1,11 +1,13 @@
 <div class="stage">
   <!-- <button mat-raised-button (click)="changeLocationRandom()">change to random location</button> -->
-  {{location?.name}}
+  <h1><b>{{location?.name}}</b></h1>
   <img class="protagonist" src="assets/{{central.playerImage}}.gif" *ngIf="central.enemyImage">
   <img class="background" src="assets/dark-forest.gif" >
   <img class="enemy" src="assets/{{central.enemyImage}}.gif" *ngIf="central.enemyImage" >
-  <button *ngIf="location?.nextAreas?.north" mat-raised-button class="north" (click)="goNorth()">NORTH ^</button>
-  <button *ngIf="location?.nextAreas?.south" mat-raised-button class="south" (click)="goSouth()" >SOUTH V</button>
-  <button *ngIf="location?.nextAreas?.east" mat-raised-button class="east"(click)="goEast()">EAST ></button>
-  <button *ngIf="location?.nextAreas?.west" mat-raised-button class="west" (click)="goWest()">< WEST</button>
+  <div *ngIf="!central.enemyImage">
+    <button *ngIf="location?.nextAreas?.north" mat-raised-button class="north" (click)="goNorth()">NORTH to {{location.nextAreas.north}}</button>
+    <button *ngIf="location?.nextAreas?.south" mat-raised-button class="south" (click)="goSouth()" >SOUTH to {{location.nextAreas.south}}</button>
+    <button *ngIf="location?.nextAreas?.east" mat-raised-button class="east"(click)="goEast()">EAST to {{location.nextAreas.east}}</button>
+    <button *ngIf="location?.nextAreas?.west" mat-raised-button class="west" (click)="goWest()">WEST to {{location.nextAreas.west}}</button>
+  </div>
 </div>
