battle on change location

--- a/src/app/arena/arena.component.html
+++ b/src/app/arena/arena.component.html
@@ -21,7 +21,7 @@
     <button
      [disabled]="enemyHp > 0"
        mat-raised-button
-      (click)="getEnemy()">
+      (click)="central.getEnemy()">
       Find New Opponent
 
     </button>
