--- a/src/app/stage/stage.component.scss
+++ b/src/app/stage/stage.component.scss
@@ -15,13 +15,34 @@
     z-index: 1000;
     width: 380px;
   }
-  .enemy{
+  .playerSlash{
+    position: absolute;
+    top: 210px;
+    left: 16%;
+    z-index: 1001;
+    width: 420px;
+
+  }
+  .enemyRest{
     position: absolute;
     top: 250px;
     left: 60%;
     z-index: 2;
     max-width: 380px;
     min-width: 250px;
+    transition: all .1s ease;
+  }
+  .enemyStrike{
+    @extend .enemyRest;
+    transform: translate(-30px, 0px);
+  }
+  .enemySlash{
+    position: absolute;
+    top: 230px;
+    left: 52%;
+    z-index: 3;
+    width: 420px;
+
   }
   .background{
     position: absolute;
