--- a/src/app/arena/arena.component.html
+++ b/src/app/arena/arena.component.html
@@ -12,7 +12,7 @@
   <div class="merchant">
     <button
      [disabled]="enemyHp > 0 || central.merchantButtonDisabled"
-      mat-raised-button
+      mat-raised-button color="primary"
       (click)="merchantModal()">
       Talk to Merchant
     </button>
@@ -31,7 +31,7 @@
   <div class="attack">
     <button
      mat-raised-button
-    [disabled]="wait || player.hp < 1"
+    [disabled]="!showBattleOptions || player.hp < 1"
     (click)="attack()">
       Attack
 
@@ -39,7 +39,7 @@
   <div>
     <button class="item"
      mat-raised-button
-    [disabled]="wait || player.hp < 1">
+    [disabled]="!showBattleOptions || player.hp < 1">
       <mat-form-field>
           Item
         <mat-select class="select">
@@ -58,7 +58,7 @@
     <button
     class="flee"
     mat-raised-button
-    [disabled]="wait || player.hp < 1"
+    [disabled]="!showBattleOptions || player.hp < 1"
     (click)="flee()"
     >Flee
   </button>
