--- a/src/app/menu-dialog/menu-dialog.component.html
+++ b/src/app/menu-dialog/menu-dialog.component.html
@@ -3,21 +3,21 @@
     <h2>Main-Hand Weapons</h2>
     <mat-selection-list [multiple]="false">
       <mat-list-option *ngFor="let item of weaponGroup" [value]="item" (click)="equipWeapon(item)">
-        {{item.name}} - dmg: {{item.minDmg}}-{{item.maxDmg}} | dex: {{item.dex}} | sp: {{item.special}}
+        {{item.name}} &nbsp; dmg: {{item.minDmg}}-{{item.maxDmg}} &nbsp; dex: {{item.dex}} &nbsp; sp: {{item.special}}
       </mat-list-option>
     </mat-selection-list>
     <hr>
     <h2>Off-Hand Items</h2>
     <mat-selection-list [multiple]="false">
       <mat-list-option *ngFor="let item of secondaryGroup" [value]="item" (click)="equipSecondary(item)">
-        {{item.name}} - +dex: {{item.dex}} | +min: {{item.minDmg}} | +hp: {{item.hp}}
+        {{item.name}} &nbsp; +dex: {{item.dex}} &nbsp; +min: {{item.minDmg}} &nbsp; +hp: {{item.hp}}
       </mat-list-option>
     </mat-selection-list>
     <hr>
     <h2>Armor</h2>
     <mat-selection-list [multiple]="false">
       <mat-list-option *ngFor="let item of armorGroup" [value]="item" (click)="equipArmor(item)">
-        {{item.name}} - def: {{item.defense}} | ev: {{item.evade}}
+        {{item.name}} &nbsp; def: {{item.defense}} &nbsp; ev: {{item.evade}}
       </mat-list-option>
     </mat-selection-list>
     <hr>
